--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.6",
     "@mui/system": "^5.16.6",
     "@remix-run/router": "^1.19.0",
+    "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
