--- a/ui/package.json
+++ b/ui/package.json
@@ -16,8 +16,11 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/system": "^5.16.6",
+    "@mui/x-date-pickers": "^7.12.0",
     "@remix-run/router": "^1.19.0",
     "axios": "^1.7.3",
+    "dayjs": "^1.11.12",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
