--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -8,6 +8,9 @@
       "path": "./tsconfig.node.json"
     }
   ],
+  "compilerOptions": {
+    "skipLibCheck": true
+  }
   // "compilerOptions": {
   //   "paths": {
   //     "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
