--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "argon2": "^0.40.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "file-type-mime": "^0.4.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.17.0",
@@ -42,6 +43,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
