--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/system": "^5.16.6",
+    "@mui/utils": "^5.16.6",
     "@mui/x-date-pickers": "^7.12.0",
     "@remix-run/router": "^1.19.0",
     "axios": "^1.7.3",
