--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.10",
+    "@nestjs/websockets": "^10.3.10",
     "@prisma/client": "^5.17.0",
     "argon2": "^0.40.3",
     "class-transformer": "^0.5.1",
@@ -35,7 +37,8 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^5.17.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
