--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
